# ai-agent-resume-builder

./: .env  .env.example  .gitignore  main.py  pyproject.toml
api/: main.py  summarize.py
application/: config.py
application/usecases/: summarize.py
domain/: summary.py
domain/exceptions/: __init__.py
frontend/: package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts
frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
infrastructure/document_generators/: __init__.py  docx_generator.py  pdf_generator.py
infrastructure/llm/: summarizer_chain.py
